[package]
name = "actt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
egui-dropdown = "0.1"
eframe = { version = "0.19.0", features = ["persistence"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
image = "0.24.4"
dirs = "4.0.0"
