[package]
name = "actt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies
egui = "0.22.0"
eframe = "0.22.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }

# Debugging
tracing = "0.1"

dirs = "4.0.0"
rand = "0.8.5"
